[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8.4"
crossbeam-deque = "0.8.6"
futures = "0.3.32"
num_cpus = "1.17.0"
polling = "3.11.0"
rand = "0.10.0"
socket2 = "0.5.8"
libc = "0.2.169"
hdrhistogram = "7.5.4"
comfy-table = "7.2.2"

[dev-dependencies]
criterion = "0.8.2"
