[package]
name = "taiga"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam = "0.8.4"
futures = "0.3.32"
num_cpus = "1.17.0"
mio = { version = "1.0", features = ["os-poll", "net"] }
slab = "0.4"
parking_lot = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.38", features = ["full"] }

[[bench]]
name = "runtime_perf"
harness = false
